--- a/package.json
+++ b/package.json
@@ -10,19 +10,35 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "prettier": "^3.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router": "^6.23.1",
+    "react-router-dom": "^6.23.1",
+    "sass": "^1.77.4"
   },
   "devDependencies": {
+    "@eslint/js": "^9.4.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
+    "@typescript-eslint/eslint-plugin": "8.0.0-alpha.30",
+    "@typescript-eslint/parser": "8.0.0-alpha.30",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-simple-import-sort": "^12.0.0",
+    "eslint": "8.57.0",
+    "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "globals": "^15.4.0",
     "typescript": "^5.2.2",
+    "typescript-eslint": "^7.13.0",
     "vite": "^5.2.0"
+  },
+  "resolve-path-alias": {
+    "alias": {
+      "@/*": "src/*"
+    }
   }
 }
