--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,11 +1,4 @@
 {
-  "compilerOptions": {
-    "composite": true,
-    "skipLibCheck": true,
-    "module": "ESNext",
-    "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true,
-    "strict": true
-  },
-  "include": ["vite.config.ts"]
+  "extends": "./tsconfig.json",
+  "include": ["vite-env.d.ts", "**/*.ts", "**/*.tsx", ".eslintrc.json"]
 }
