--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.18.0",
     "prettier": "^3.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,13 +25,13 @@
     "@typescript-eslint/eslint-plugin": "8.0.0-alpha.30",
     "@typescript-eslint/parser": "8.0.0-alpha.30",
     "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-simple-import-sort": "^12.0.0",
-    "eslint": "8.57.0",
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "eslint-plugin-simple-import-sort": "^12.0.0",
     "globals": "^15.4.0",
     "typescript": "^5.2.2",
     "typescript-eslint": "^7.13.0",
