--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.7",
+    "@hookform/resolvers": "^3.6.0",
     "antd": "^5.18.0",
     "prettier": "^3.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
-    "sass": "^1.77.4"
+    "sass": "^1.77.4",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.4.0",
