--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@ant-design/icons": "^5.3.7",
     "@hookform/resolvers": "^3.6.0",
     "antd": "^5.18.0",
+    "axios": "^1.7.2",
     "dayjs": "^1.11.11",
     "prettier": "^3.3.1",
     "react": "^18.2.0",
