--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "react-hook-form": "^7.51.5",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
+    "uuid": "^10.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.4.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "8.0.0-alpha.30",
     "@typescript-eslint/parser": "8.0.0-alpha.30",
     "@vitejs/plugin-react": "^4.2.1",
