--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@amcharts/amcharts5": "^5.9.12",
     "@amcharts/amcharts5-fonts": "^5.0.1",
     "@amcharts/amcharts5-geodata": "^5.1.3",
@@ -17,14 +18,19 @@
     "@hookform/resolvers": "^3.6.0",
     "antd": "^5.18.0",
     "axios": "^1.7.2",
+    "D": "^1.0.0",
     "dayjs": "^1.11.11",
+    "plugin": "^0.3.3",
     "prettier": "^3.3.1",
+    "pwa": "^1.9.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
     "uuid": "^10.0.0",
+    "window": "^4.2.7",
+    "workbox": "^0.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
@@ -46,7 +52,8 @@
     "sass": "^1.77.4",
     "typescript": "^5.2.2",
     "typescript-eslint": "^7.13.0",
-    "vite": "^5.2.0"
+    "vite": "^5.3.1",
+    "vite-plugin-pwa": "^0.20.0"
   },
   "resolve-path-alias": {
     "alias": {
