--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@amcharts/amcharts5-geodata": "^5.1.3",
     "@ant-design/icons": "^5.3.7",
     "@hookform/resolvers": "^3.6.0",
+    "@types/node": "^20.14.2",
     "antd": "^5.18.0",
     "axios": "^1.7.2",
     "D": "^1.0.0",
