--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.2",
     "D": "^1.0.0",
     "dayjs": "^1.11.11",
+    "file-saver": "^2.0.5",
     "plugin": "^0.3.3",
     "prettier": "^3.3.1",
     "pwa": "^1.9.7",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.4.0",
+    "@types/file-saver": "^2.0.7",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/uuid": "^9.0.8",
